{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 144,
  "lineage": "e5b932a9-2c5b-1c8b-b436-d71566718b75",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sprint-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0788cee5cd56fa8d6",
            "domain": "vpc",
            "id": "eipalloc-0788cee5cd56fa8d6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-45-21-203.compute-1.amazonaws.com",
            "public_ip": "52.45.21.203",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.sprint-igw",
            "aws_vpc.sprint-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:423007117633:instance/i-03dc67189b4e107bb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03dc67189b4e107bb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01729fe861b23eee5",
            "private_dns": "ip-10-0-1-72.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02584845043a7faba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075a739d054638278",
            "tags": {
              "Name": "private_instance"
            },
            "tags_all": {
              "Name": "private_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-034e5b167e94b6d90"
            ]
          },
          "dependencies": [
            "aws_security_group.private-security-group",
            "aws_subnet.sprint-subnets",
            "aws_vpc.sprint-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:423007117633:instance/i-06f0b9edc4717df8d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f0b9edc4717df8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0df41c97c6197cdc1",
            "private_dns": "ip-10-0-0-138.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.138",
            "public_ip": "3.237.242.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c3d8655c41f9d387",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c501125a05e5eea1",
            "tags": {
              "Name": "public_instance"
            },
            "tags_all": {
              "Name": "public_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff3cdba63742499d"
            ]
          },
          "dependencies": [
            "aws_security_group.public-securit-group",
            "aws_subnet.sprint-subnets",
            "aws_vpc.sprint-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sprint-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423007117633:internet-gateway/igw-0839f38ee3ca12cac",
            "id": "igw-0839f38ee3ca12cac",
            "owner_id": "423007117633",
            "tags": {
              "Name": "sprint-igw"
            },
            "tags_all": {
              "Name": "sprint-igw"
            },
            "vpc_id": "vpc-00376ff2058a42572"
          },
          "dependencies": [
            "aws_vpc.sprint-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sprint-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0788cee5cd56fa8d6",
            "association_id": "eipassoc-01e22432ca856d2ee",
            "connectivity_type": "public",
            "id": "nat-0e9ef35e2c8c315b6",
            "network_interface_id": "eni-0392d49b125b75414",
            "private_ip": "10.0.0.6",
            "public_ip": "52.45.21.203",
            "subnet_id": "subnet-0c501125a05e5eea1",
            "tags": {
              "Name": "sprint-nat"
            },
            "tags_all": {
              "Name": "sprint-nat"
            }
          },
          "dependencies": [
            "aws_eip.sprint-nat-eip",
            "aws_internet_gateway.sprint-igw",
            "aws_subnet.sprint-subnets",
            "aws_vpc.sprint-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e38973ebf221b4121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e9ef35e2c8c315b6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e38973ebf221b412",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.sprint-nat-eip",
            "aws_internet_gateway.sprint-igw",
            "aws_nat_gateway.sprint-nat",
            "aws_route_table.private-rt",
            "aws_subnet.sprint-subnets",
            "aws_vpc.sprint-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423007117633:route-table/rtb-0e38973ebf221b412",
            "id": "rtb-0e38973ebf221b412",
            "owner_id": "423007117633",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00376ff2058a42572"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sprint-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publit-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423007117633:route-table/rtb-0352b614b3cb15dac",
            "id": "rtb-0352b614b3cb15dac",
            "owner_id": "423007117633",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0839f38ee3ca12cac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publit-rt"
            },
            "tags_all": {
              "Name": "publit-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00376ff2058a42572"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sprint-igw",
            "aws_vpc.sprint-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02056f107b7e70b80",
            "route_table_id": "rtb-0e38973ebf221b412",
            "subnet_id": "subnet-075a739d054638278"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.sprint-subnets",
            "aws_vpc.sprint-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bf16dee92af560f",
            "route_table_id": "rtb-0352b614b3cb15dac",
            "subnet_id": "subnet-0c501125a05e5eea1"
          },
          "dependencies": [
            "aws_internet_gateway.sprint-igw",
            "aws_route_table.publit-rt",
            "aws_subnet.sprint-subnets",
            "aws_vpc.sprint-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423007117633:security-group/sg-034e5b167e94b6d90",
            "description": "Private Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034e5b167e94b6d90",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-security-group",
            "name_prefix": "",
            "owner_id": "423007117633",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-security-group"
            },
            "tags_all": {
              "Name": "private-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-00376ff2058a42572"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sprint-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-securit-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423007117633:security-group/sg-0ff3cdba63742499d",
            "description": "Public Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff3cdba63742499d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-securit-group",
            "name_prefix": "",
            "owner_id": "423007117633",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-securit-group"
            },
            "tags_all": {
              "Name": "public-securit-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-00376ff2058a42572"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sprint-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sprint-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423007117633:subnet/subnet-0c501125a05e5eea1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c501125a05e5eea1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423007117633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet 1",
              "subnet1": "Public",
              "subnet2": "Private"
            },
            "tags_all": {
              "Name": "Subnet 1",
              "subnet1": "Public",
              "subnet2": "Private"
            },
            "vpc_id": "vpc-00376ff2058a42572"
          },
          "dependencies": [
            "aws_vpc.sprint-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423007117633:subnet/subnet-075a739d054638278",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075a739d054638278",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423007117633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet 2",
              "subnet1": "Public",
              "subnet2": "Private"
            },
            "tags_all": {
              "Name": "Subnet 2",
              "subnet1": "Public",
              "subnet2": "Private"
            },
            "vpc_id": "vpc-00376ff2058a42572"
          },
          "dependencies": [
            "aws_vpc.sprint-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sprint-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423007117633:vpc/vpc-00376ff2058a42572",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0166324b1796ff6aa",
            "default_route_table_id": "rtb-05c148bf91c93546e",
            "default_security_group_id": "sg-0fc4f56efab3d3e33",
            "dhcp_options_id": "dopt-bfb263c5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00376ff2058a42572",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c148bf91c93546e",
            "owner_id": "423007117633",
            "tags": {
              "Name": "sprint-vpc"
            },
            "tags_all": {
              "Name": "sprint-vpc"
            }
          }
        }
      ]
    }
  ]
}